0029285: Visualization, V3d_View::UpdateLights() - eliminate implicit redraw